<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message" />

    <EditText
        android:id="@+id/editText_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="39dp"
        android:ems="15"
        android:inputType="textUri"
        android:hint="@string/url_hint"
        android:text="@string/url_default" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_webview_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_url"
        android:layout_below="@+id/editText_url"
        android:layout_marginTop="43dp"
        android:text="@string/button_webview_default"
        android:onClick="loadWebviewDefault" />

    <Button
        android:id="@+id/button_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_webview_default"
        android:layout_below="@+id/button_webview_default"
        android:layout_marginTop="37dp"
        android:text="@string/button_browser"
        android:onClick="loadBrowser" />

</RelativeLayout>